# clickbait-analysis

./: .gitignore  README.md  pyproject.toml
src/clickbaitanalysis/: __init__.py  cli.py  models.py  reader.py  renderer.py  report_registry.py
src/clickbaitanalysis/reports/: __init__.py  base.py  clickbait.py  registry.py
tests/: test_cli.py  test_clickbait_report.py  test_reader.py  test_reports.py
