[project]
name = "clickbaitanalysis"
version = "0.1.0"
description = "CLI tool for analyzing clickbait YouTube videos from CSV metrics."
authors = [
    {name = "Daniil Korobko",email = "korobkodaniil396@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate>=0.9,<1.0",
]

[project.scripts]
clickbaitanalysis = "clickbaitanalysis.cli:main"

[tool.poetry]
packages = [
    { include = "clickbaitanalysis", from = "src" }
]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.10,<2.0"
pytest = ">=8.0,<9.0"
pytest-cov = ">=5.0,<7.0"
ruff = ">=0.11,<1.0"

[tool.pytest.ini_options]
addopts = "--cov=clickbaitanalysis --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
files = ["src"]
mypy_path = "src"
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["tabulate"]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
